# embedding-service

./: .dockerignore  .env  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  config.yaml  product.Dockerfile  pyproject.toml
.gitlab/ci/: Build.gitlab-ci.yml  Dependency-Management.gitlab-ci.yml  Lint.gitlab-ci.yml  Test.gitlab-ci.yml
.gitlab/issue_templates/: Default.md
app/: __init__.py  config.py  constants.py  crud.py  dependencies.py  exceptions.py  handlers.py  log.py  main.py  models.py  version.py
app/api/: api_router.py
app/api/examples/: embedding.py
app/api/routers/: embedding.py
app/docs/: embedding.py  items.py  main.py
app/exceptions/: base.py  service.py
app/internal/: admin.py
app/routers/: embedding.py  items.py  users.py
app/schemas/: models.py  response.py
app/src/: config.py  embedding.py  model_handler.py  model_handling.py
app/src/exception/: exceptions.py  service.py
app/src/items/: items.py
app/utils/: authentication.py
tests/: check_common_conditions.py  conftest.py  test_main.py
tests/internal/: test_admin.py
tests/routers/: test_embedding.py  test_items.py  test_users.py
tests/src/: test_embedding.py
