[build-system]
requires = [
    "setuptools >= 61.0.0",
    "wheel >= 0.37.1"
]
build-backend = "setuptools.build_meta"


[project]   # TODO: 프로젝트 메타데이터 작성 (되도록이면 main.py의 app과 동일한 name, version, description으로 작성하기)
name = "python-fastapi-template"
version = "v1"  # major 버전만 기입
authors = [
    { name = "Seoyeon Park", email = "sally9476@wisenut.co.kr" }
]
maintainers = [
    { name = "Moonjong Kim", email = "penbell@wisenut.co.kr" },
    { name = "Chanyeong Lee", email = "wisnt65@wisenut.co.kr" },
    { name = "Seoyeon Park", email = "sally9476@wisenut.co.kr" },
    { name = "Joongheon Jeong", email = "legagain@wisenut.co.kr" }
]
description = "DE Team Python FastAPI Template"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
keywords = ["python", "fastapi", "template"]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Natural Language :: Korean",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP",
    "Intended Audience :: Developers"
]
dependencies = [
    "annotated-types==0.5.0",
    "anyio==3.7.1",
    "click==8.1.7",
    "colorama==0.4.6",
    "exceptiongroup==1.1.3",
    "fastapi==0.103.1",
    "h11==0.14.0",
    "idna==3.4",
    "loguru==0.7.1",
    "pydantic==2.3.0",
    "pydantic_core==2.6.3",
    "PyYAML==6.0.1",
    "sniffio==1.3.0",
    "starlette==0.27.0",
    "toml==0.10.2",
    "typing_extensions==4.7.1",
    "uvicorn==0.23.2",
    "win32-setctime==1.1.0"
]

[project.optional-dependencies]
test = [
    "pytest >= 7.4.1",
    "httpx >= 0.24.0"
]
lint = [
    "mypy==1.5.1",
    "ruff==0.0.278",
    "pyright==1.1.325"
]

[tool.setuptools]
py-modules = ["app"]


[tool.ruff]
ignore = ['W']
line-length = 125
exclude = [
    '.git',
    '__pycache__',
    '.mypy_cache',
    '.ruff_cache',
    'docs',
    'venv',
    'tests',
    'build',
    'dist',
    './app/__init__.py'
]
target-version = "py39"
[tool.ruff.mccabe]
max-complexity = 10


[tool.mypy]
plugins = [
    'pydantic.mypy'
]
python_version = "3.9"
follow_imports = "skip"
warn_redundant_casts = true
warn_unused_ignores = false # true시 ignore 처리 error로 뜨게 함
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
warn_return_any = true
warn_unused_configs = true
exclude = [
    '.git',
    '__pycache__',
    '.mypy_cache',
    '.ruff_cache',
    'docs',
    'venv',
    'tests',
    'build',
    'dist',
]
[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
[[tool.mypy.overrides]]
module = [
    "kiwipiepy",
    "keybert",
    "toml",
    "yaml",
    "version_info"
]
ignore_missing_imports = true


[tool.pyright]
include = ["app"]
exclude = [
    '.git',
    '__pycache__',
    '.mypy_cache',
    '.ruff_cache',
    '.pytest_cache',
    'docs',
    'venv',
    'tests',
    'build',
    'dist',
    'pypi',
    'logs',
]
defineConstant = { DEBUG = true }
reportMissingImports = true
reportMissingTypeStubs = false
typeCheckingMode = "basic"
pythonVersion = "3.9"
